# nules_oop

./: .gitignore  CMakeLists.txt
coursework/: coursework.cpp
lab1/: main.cpp
lab2/: friendlyFunction.cpp
lab3/: students.cpp
lab4/: main.cpp
lab5/: main.cpp
lab6/: inheritance.cpp
lab7/: lab7.cpp
