cmake_minimum_required(VERSION 3.23)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab1_example lab1/example.cpp)
add_executable(lab1_main  lab1/main.cpp)
add_executable(lab2_example  lab2/example.cpp)
add_executable(lab2_main lab2/friendlyFunction.cpp)
add_executable(lab3_students lab3/students.cpp)
add_executable(lab3_example lab3/example.cpp)
add_executable(lab4_example lab4/example.cpp)
add_executable(lab4_main lab4/main.cpp)

